--- a/data/mtg.yml
+++ b/data/mtg.yml
@@ -3,9 +3,180 @@
   :title: "Strike"
   :type: "Action"
   :image: "guardian/battle-axe.svg"
+  :border_color: "#c22"
   :line1: "Deal 3 damage."
   :line2: ""
-  :line3: "If you <i>Strike</i> an enemy"
-  :line4: "who damaged you this"
-  :line5: "Round, deal 5 instead."
+  :line3: "If you <i>Strike</i> an enemy who"
+  :line4: "damaged you this <b>Round</b>, deal"
+  :line5: "5 damage instead."
+  :line6: ""
+-
+  :title: "Block"
+  :type: "Reaction"
+  :image: "guardian/checked-shield.svg"
+  :border_color: "#c22"
+  :line1: "Prevent up to 2 damage from"
+  :line2: "an enemy attack."
+  :line3: ""
+  :line4: "If you <i>Block</i> a <b>Forced Attack</b>,"
+  :line5: "you are attacked instead"
+  :line6: "and you gain <b>Inspiration</b>."
+-
+  :title: "Bash"
+  :type: "Action"
+  :image: "guardian/shield-bash.svg"
+  :border_color: "#c22"
+  :line1: "Stun an enemy you are"
+  :line2: "engaged with."
+  :line3: ""
+  :line4: "<b>Combo</b>: <i>Slash</i>"
+  :line5: "Deal 5 damage to that enemy."
+  :line6: ""
+# Ranger
+-
+  :title: "Shoot"
+  :type: "Action"
+  :image: "ranger/high-shot.svg"
+  :border_color: "#444"
+  :line1: "Deal 3 damage."
+  :line2: ""
+  :line3: "If you've taken no damage"
+  :line4: "this <b>Round</b>, deal 5 damage"
+  :line5: "instead."
+  :line6: ""
+-
+  :title: "Evade"
+  :type: "Reaction"
+  :image: "ranger/dodging.svg"
+  :border_color: "#444"
+  :line1: "Prevent up to 2 damage to you."
+  :line2: "<i>and/or</i>"
+  :line3: "Prevent 1 status from being"
+  :line4: "applied to you."
+  :line5: ""
+  :line6: ""
+-
+  :title: "Hasten"
+  :type: "Action"
+  :image: "ranger/wingfoot.svg"
+  :border_color: "#444"
+  :line1: "Draw 2 cards."
+  :line2: "You may take another <b>Action</b>."
+  :line3: ""
+  :line4: "<i>You cannot Hasten more than</i>"
+  :line5: "<i>once per Round.</i>"
+  :line6: ""
+# Elementalist
+-
+  :title: "Burn"
+  :type: "Action"
+  :image: "elementalist/flamer.svg"
+  :border_color: "#7af"
+  :line1: "<b>Scorch</b> an enemy."
+  :line2: "Deal 3 damage to each enemy"
+  :line3: "for each <b>Scorch</b> on them."
+  :line4: ""
+  :line5: "<i>Each enemy cannot be</i>"
+  :line6: "<i><b>Scorched</b> more than 3 times.</i>"
+-
+  :title: "Freeze"
+  :type: "Action"
+  :image: "elementalist/beveled-star.svg"
+  :border_color: "#7af"
+  :line1: "Deal 3 damage and <b>Chill</b>"
+  :line2: "an enemy."
+  :line3: ""
+  :line4: "If you <i>Freeze</i> an enemy who"
+  :line5: "is already <b>Chilled</b>, <b>Stun</b> it."
+  :line6: ""
+-
+  :title: "Shock"
+  :type: "Reaction"
+  :image: "elementalist/electric.svg"
+  :border_color: "#7af"
+  :line1: "Draw a card."
+  :line2: "Deal 2 damage to all"
+  :line3: "<b>Scorched</b> enemies."
+  :line4: "Prevent 2 damage from all"
+  :line5: "<b>Chilled</b> enemies <i>(if applicable)</i>."
+  :line6: ""
+# Tactician
+-
+  :title: "Bolster"
+  :type: "Action"
+  :image: "tactician/heart-plus.svg"
+  :border_color: "#482"
+  :line1: "Restore 2 <b>Health</b> to any player."
+  :line2: ""
+  :line3: "Remove <i>or</i> duplicate 1 status"
+  :line4: "on any player."
+  :line5: ""
+  :line6: ""
+-
+  :title: "Inspire"
+  :type: "Action"
+  :image: "tactician/laurels.svg"
+  :border_color: "#482"
+  :line1: "All players draw a card and"
+  :line2: "gain <b>Inspiration</b>."
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
+-
+  :title: "Coordinate"
+  :type: "Reaction"
+  :image: "tactician/avoidance.svg"
+  :border_color: "#482"
+  :line1: "Play when an ally deals 5"
+  :line2: "or more damage to deal 5"
+  :line3: "damage."
+  :line4: ""
+  :line5: "<i>You may target a different</i>"
+  :line6: "<i>enemy than your ally.</i>"
+# Arcanist
+-
+  :title: "Blast"
+  :type: "Action"
+  :image: "arcanist/hypersonic-bolt.svg"
+  :border_color: "#26e"
+  :line1: "Deal 4 damage."
+  :line2: ""
+  :line3: "<b>Combo</b>: <i>Energize</i>"
+  :line4: "Draw 2 cards."
+  :line5: ""
+  :line6: ""
+-
+  :title: "Protect"
+  :type: "Rection"
+  :image: "arcanist/aura.svg"
+  :border_color: "#26e"
+  :line1: ""
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
+-
+  :title: "Unleash"
+  :type: "Action"
+  :image: "arcanist/glowing-hands.svg"
+  :border_color: "#26e"
+  :line1: ""
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
+
+-
+  :title: "TEMPLATE"
+  :type: "Action"
+  :image: "ranger/wingfoot.svg"
+  :border_color: "#fff"
+  :line1: ""
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: ""
   :line6: ""
