Add Player Set 2

--- a/data/mtg.yml
+++ b/data/mtg.yml
@@ -1,5 +1,6 @@
 # Guardian
 -
+  :deck: "Guardian"
   :title: "Strike"
   :type: "Action"
   :image: "guardian/battle-axe.svg"
@@ -11,6 +12,7 @@
   :line5: "5 damage instead."
   :line6: ""
 -
+  :deck: "Guardian"
   :title: "Block"
   :type: "Reaction"
   :image: "guardian/checked-shield.svg"
@@ -22,6 +24,7 @@
   :line5: "you are attacked instead"
   :line6: "and you gain <b>Inspiration</b>."
 -
+  :deck: "Guardian"
   :title: "Bash"
   :type: "Action"
   :image: "guardian/shield-bash.svg"
@@ -34,10 +37,11 @@
   :line6: ""
 # Ranger
 -
+  :deck: "Ranger"
   :title: "Shoot"
   :type: "Action"
   :image: "ranger/high-shot.svg"
-  :border_color: "#444"
+  :border_color: "#ccc"
   :line1: "Deal 3 damage."
   :line2: ""
   :line3: "If you've taken no damage"
@@ -45,10 +49,11 @@
   :line5: "instead."
   :line6: ""
 -
+  :deck: "Ranger"
   :title: "Evade"
   :type: "Reaction"
   :image: "ranger/dodging.svg"
-  :border_color: "#444"
+  :border_color: "#ccc"
   :line1: "Prevent up to 2 damage to you."
   :line2: "<i>and/or</i>"
   :line3: "Prevent 1 status from being"
@@ -56,10 +61,11 @@
   :line5: ""
   :line6: ""
 -
+  :deck: "Ranger"
   :title: "Hasten"
   :type: "Action"
   :image: "ranger/wingfoot.svg"
-  :border_color: "#444"
+  :border_color: "#ccc"
   :line1: "Draw 2 cards."
   :line2: "You may take another <b>Action</b>."
   :line3: ""
@@ -68,10 +74,11 @@
   :line6: ""
 # Elementalist
 -
+  :deck: "Elementalist"
   :title: "Burn"
   :type: "Action"
   :image: "elementalist/flamer.svg"
-  :border_color: "#7af"
+  :border_color: "#3bf"
   :line1: "<b>Scorch</b> an enemy."
   :line2: "Deal 3 damage to each enemy"
   :line3: "for each <b>Scorch</b> on them."
@@ -79,10 +86,11 @@
   :line5: "<i>Each enemy cannot be</i>"
   :line6: "<i><b>Scorched</b> more than 3 times.</i>"
 -
+  :deck: "Elementalist"
   :title: "Freeze"
   :type: "Action"
   :image: "elementalist/beveled-star.svg"
-  :border_color: "#7af"
+  :border_color: "#3bf"
   :line1: "Deal 3 damage and <b>Chill</b>"
   :line2: "an enemy."
   :line3: ""
@@ -90,10 +98,11 @@
   :line5: "is already <b>Chilled</b>, <b>Stun</b> it."
   :line6: ""
 -
+  :deck: "Elementalist"
   :title: "Shock"
   :type: "Reaction"
   :image: "elementalist/electric.svg"
-  :border_color: "#7af"
+  :border_color: "#3bf"
   :line1: "Draw a card."
   :line2: "Deal 2 damage to all"
   :line3: "<b>Scorched</b> enemies."
@@ -102,21 +111,23 @@
   :line6: ""
 # Tactician
 -
+  :deck: "Tactician"
   :title: "Bolster"
   :type: "Action"
   :image: "tactician/heart-plus.svg"
-  :border_color: "#482"
+  :border_color: "#492"
   :line1: "Restore 2 <b>Health</b> to any player."
-  :line2: ""
-  :line3: "Remove <i>or</i> duplicate 1 status"
-  :line4: "on any player."
-  :line5: ""
-  :line6: ""
+  :line2: "Remove or duplicate 1 <b>Status</b>"
+  :line3: "on any player."
+  :line4: ""
+  :line5: "<i>You may choose a different</i>"
+  :line6: "<i>player for each effect.</i>"
 -
+  :deck: "Tactician"
   :title: "Inspire"
   :type: "Action"
-  :image: "tactician/laurels.svg"
-  :border_color: "#482"
+  :image: "tactician/team-upgrade.svg"
+  :border_color: "#492"
   :line1: "All players draw a card and"
   :line2: "gain <b>Inspiration</b>."
   :line3: ""
@@ -124,18 +135,94 @@
   :line5: ""
   :line6: ""
 -
+  :deck: "Tactician"
   :title: "Coordinate"
   :type: "Reaction"
-  :image: "tactician/avoidance.svg"
-  :border_color: "#482"
+  :image: "tactician/explosive-meeting.svg"
+  :border_color: "#492"
   :line1: "Play when an ally deals 5"
   :line2: "or more damage to deal 5"
   :line3: "damage."
   :line4: ""
   :line5: "<i>You may target a different</i>"
   :line6: "<i>enemy than your ally.</i>"
+# Brawler
+-
+  :deck: "Brawler"
+  :title: "Tackle"
+  :type: "Action"
+  :image: "brawler/charging-bull.svg"
+  :border_color: "#f22"
+  :line1: "Deal 6 damage."
+  :line2: "Take 1 damage."
+  :line3: ""
+  :line4: "<b>Combo</b>: <i>Takedown</i>"
+  :line5: "<b>Stun</b> the target."
+  :line6: ""
+-
+  :deck: "Brawler"
+  :title: "Flurry"
+  :type: "Action"
+  :image: "brawler/punch-blast.svg"
+  :border_color: "#f22"
+  :line1: "<i>Multi-target</i>"
+  :line2: "Deal 3 damage."
+  :line3: ""
+  :line4: "<b>Mill</b> up to 3 cards to deal 1"
+  :line5: "more damage per card."
+  :line6: ""
+-
+  :deck: "Brawler"
+  :title: "Counter"
+  :type: "Reaction"
+  :image: "brawler/thrust-bend.svg"
+  :border_color: "#f22"
+  :line1: "Play when you are attacked to"
+  :line2: "deal 2 damage to your"
+  :line3: "attacker and draw a card."
+  :line4: ""
+  :line5: "If this damage defeats them,"
+  :line6: "they deal no damage to you."
+# Shadow
+-
+  :deck: "Shadow"
+  :title: "Drain"
+  :type: "Action"
+  :image: "shadow/snake-tongue.svg"
+  :border_color: "#444"
+  :line1: "Deal 3 damage."
+  :line2: "Restore 1 <b>Health</b> to yourself."
+  :line3: "Draw a card."
+  :line4: ""
+  :line5: ""
+  :line6: ""
+-
+  :deck: "Shadow"
+  :title: "Misdirect"
+  :type: "Reaction"
+  :image: "shadow/avoidance.svg"
+  :border_color: "#444"
+  :line1: "Play when an enemy attacks"
+  :line2: "to prevent up to 2 damage and"
+  :line3: "deal 2 damage to a different"
+  :line4: "enemy."
+  :line5: ""
+  :line6: ""
+-
+  :deck: "Shadow"
+  :title: "Mimic"
+  :type: "???"
+  :image: "shadow/two-shadows.svg"
+  :border_color: "#444"
+  :line1: "While this card is in your hand,"
+  :line2: "treat it as if it were any card"
+  :line3: "in an ally's hand."
+  :line4: ""
+  :line5: ""
+  :line6: ""
 # Arcanist
 -
+  :deck: "Arcanist"
   :title: "Blast"
   :type: "Action"
   :image: "arcanist/hypersonic-bolt.svg"
@@ -147,36 +234,63 @@
   :line5: ""
   :line6: ""
 -
+  :deck: "Arcanist"
   :title: "Protect"
-  :type: "Rection"
+  :type: "Reaction"
   :image: "arcanist/aura.svg"
   :border_color: "#26e"
-  :line1: ""
-  :line2: ""
+  :line1: "<i>Multi-target</i>"
+  :line2: "Prevent 1 damage."
   :line3: ""
-  :line4: ""
-  :line5: ""
-  :line6: ""
+  :line4: "You may discard up to two"
+  :line5: "cards to prevent up to 3 more"
+  :line6: "damage per card."
 -
+  :deck: "Arcanist"
   :title: "Unleash"
   :type: "Action"
   :image: "arcanist/glowing-hands.svg"
   :border_color: "#26e"
-  :line1: ""
-  :line2: ""
+  :line1: "<i>Multi-target</i>"
+  :line2: "Deal 2 damage."
   :line3: ""
-  :line4: ""
+  :line4: "You may discard up to two"
+  :line5: "cards to deal 3 more damage"
+  :line6: "per card."
+# Squire
+-
+  :deck: "Squire"
+  :title: "Accompany"
+  :type: "Reaction"
+  :image: "squire/ages.svg"
+  :border_color: "#4d4"
+  :line1: "Play when an ally is attacked"
+  :line2: "to prevent 1 damage, deal 1"
+  :line3: "damage to the attacker, and"
+  :line4: "draw a card."
   :line5: ""
   :line6: ""
-
 -
-  :title: "TEMPLATE"
+  :deck: "Squire"
+  :title: "Fetch"
   :type: "Action"
-  :image: "ranger/wingfoot.svg"
-  :border_color: "#fff"
-  :line1: ""
-  :line2: ""
+  :image: "squire/rapidshare-arrow.svg"
+  :border_color: "#4d4"
+  :line1: "Restore 1 <b>Health</b> to each"
+  :line2: "player."
   :line3: ""
-  :line4: ""
-  :line5: ""
+  :line4: "Each player may place 1 of their"
+  :line5: "discarded cards (other than"
+  :line6: "<i>Fetch</i>) on top of its deck."
+-
+  :deck: "Squire"
+  :title: "Resupply"
+  :type: "Action"
+  :image: "squire/knapsack.svg"
+  :border_color: "#4d4"
+  :line1: "An ally draws 2 cards."
+  :line2: "You may take another <b>Action</b>."
+  :line3: ""
+  :line4: "<i>You cannot Resupply more than</i>"
+  :line5: "<i>once per Round.</i>"
   :line6: ""
