--- a/data/player_decks.yml
+++ b/data/player_decks.yml
@@ -3,7 +3,7 @@
   :deck: "Guardian"
   :title: "Strike"
   :type: "Action"
-  :image: "guardian/battle-axe.svg"
+  :icon: "battle-axe"
   :border_color: "#c22"
   :line1: "Deal 3 damage."
   :line2: ""
@@ -15,7 +15,7 @@
   :deck: "Guardian"
   :title: "Block"
   :type: "Reaction"
-  :image: "guardian/checked-shield.svg"
+  :icon: "checked-shield"
   :border_color: "#c22"
   :line1: "Prevent up to 2 damage from"
   :line2: "an enemy attack."
@@ -27,7 +27,7 @@
   :deck: "Guardian"
   :title: "Bash"
   :type: "Action"
-  :image: "guardian/shield-bash.svg"
+  :icon: "shield-bash"
   :border_color: "#c22"
   :line1: "Stun an enemy you are"
   :line2: "engaged with."
@@ -40,7 +40,7 @@
   :deck: "Ranger"
   :title: "Shoot"
   :type: "Action"
-  :image: "ranger/high-shot.svg"
+  :icon: "high-shot"
   :border_color: "#ccc"
   :line1: "Deal 3 damage."
   :line2: ""
@@ -52,7 +52,7 @@
   :deck: "Ranger"
   :title: "Evade"
   :type: "Reaction"
-  :image: "ranger/dodging.svg"
+  :icon: "dodging"
   :border_color: "#ccc"
   :line1: "Prevent up to 2 damage to you."
   :line2: "<i>and/or</i>"
@@ -64,7 +64,7 @@
   :deck: "Ranger"
   :title: "Hasten"
   :type: "Action"
-  :image: "ranger/wingfoot.svg"
+  :icon: "wingfoot"
   :border_color: "#ccc"
   :line1: "Draw 2 cards."
   :line2: "You may take another <b>Action</b>."
@@ -77,7 +77,7 @@
   :deck: "Elementalist"
   :title: "Burn"
   :type: "Action"
-  :image: "elementalist/flamer.svg"
+  :icon: "flamer"
   :border_color: "#3bf"
   :line1: "<b>Scorch</b> an enemy."
   :line2: "Deal 3 damage to each enemy"
@@ -89,7 +89,7 @@
   :deck: "Elementalist"
   :title: "Freeze"
   :type: "Action"
-  :image: "elementalist/beveled-star.svg"
+  :icon: "beveled-star"
   :border_color: "#3bf"
   :line1: "Deal 3 damage and <b>Chill</b>"
   :line2: "an enemy."
@@ -101,7 +101,7 @@
   :deck: "Elementalist"
   :title: "Shock"
   :type: "Reaction"
-  :image: "elementalist/electric.svg"
+  :icon: "electric"
   :border_color: "#3bf"
   :line1: "Draw a card."
   :line2: "Deal 2 damage to all"
@@ -114,7 +114,7 @@
   :deck: "Tactician"
   :title: "Bolster"
   :type: "Action"
-  :image: "tactician/heart-plus.svg"
+  :icon: "heart-plus"
   :border_color: "#492"
   :line1: "Restore 2 <b>Health</b> to any player."
   :line2: "Remove or duplicate 1 <b>Status</b>"
@@ -126,7 +126,7 @@
   :deck: "Tactician"
   :title: "Inspire"
   :type: "Action"
-  :image: "tactician/team-upgrade.svg"
+  :icon: "team-upgrade"
   :border_color: "#492"
   :line1: "All players draw a card and"
   :line2: "gain <b>Inspiration</b>."
@@ -138,7 +138,7 @@
   :deck: "Tactician"
   :title: "Coordinate"
   :type: "Reaction"
-  :image: "tactician/explosive-meeting.svg"
+  :icon: "explosive-meeting"
   :border_color: "#492"
   :line1: "Play when an ally deals 5"
   :line2: "or more damage to deal 5"
@@ -151,7 +151,7 @@
   :deck: "Brawler"
   :title: "Tackle"
   :type: "Action"
-  :image: "brawler/charging-bull.svg"
+  :icon: "charging-bull"
   :border_color: "#f22"
   :line1: "Deal 6 damage."
   :line2: "Take 1 damage."
@@ -163,7 +163,7 @@
   :deck: "Brawler"
   :title: "Flurry"
   :type: "Action"
-  :image: "brawler/punch-blast.svg"
+  :icon: "punch-blast"
   :border_color: "#f22"
   :line1: "<i>Multi-target</i>"
   :line2: "Deal 3 damage."
@@ -175,7 +175,7 @@
   :deck: "Brawler"
   :title: "Counter"
   :type: "Reaction"
-  :image: "brawler/thrust-bend.svg"
+  :icon: "thrust-bend"
   :border_color: "#f22"
   :line1: "Play when you are attacked to"
   :line2: "deal 2 damage to your"
@@ -188,7 +188,7 @@
   :deck: "Shadow"
   :title: "Drain"
   :type: "Action"
-  :image: "shadow/snake-tongue.svg"
+  :icon: "snake-tongue"
   :border_color: "#444"
   :line1: "Deal 3 damage."
   :line2: "Restore 1 <b>Health</b> to yourself."
@@ -200,7 +200,7 @@
   :deck: "Shadow"
   :title: "Misdirect"
   :type: "Reaction"
-  :image: "shadow/avoidance.svg"
+  :icon: "avoidance"
   :border_color: "#444"
   :line1: "Play when an enemy attacks"
   :line2: "to prevent up to 2 damage and"
@@ -212,7 +212,7 @@
   :deck: "Shadow"
   :title: "Mimic"
   :type: "???"
-  :image: "shadow/two-shadows.svg"
+  :icon: "two-shadows"
   :border_color: "#444"
   :line1: "While this card is in your hand,"
   :line2: "treat it as if it were any card"
@@ -225,7 +225,7 @@
   :deck: "Arcanist"
   :title: "Blast"
   :type: "Action"
-  :image: "arcanist/hypersonic-bolt.svg"
+  :icon: "hypersonic-bolt"
   :border_color: "#26e"
   :line1: "Deal 4 damage."
   :line2: ""
@@ -237,7 +237,7 @@
   :deck: "Arcanist"
   :title: "Protect"
   :type: "Reaction"
-  :image: "arcanist/aura.svg"
+  :icon: "aura"
   :border_color: "#26e"
   :line1: "<i>Multi-target</i>"
   :line2: "Prevent 1 damage."
@@ -249,7 +249,7 @@
   :deck: "Arcanist"
   :title: "Unleash"
   :type: "Action"
-  :image: "arcanist/glowing-hands.svg"
+  :icon: "glowing-hands"
   :border_color: "#26e"
   :line1: "<i>Multi-target</i>"
   :line2: "Deal 2 damage."
@@ -262,7 +262,7 @@
   :deck: "Squire"
   :title: "Accompany"
   :type: "Reaction"
-  :image: "squire/ages.svg"
+  :icon: "ages"
   :border_color: "#4d4"
   :line1: "Play when an ally is attacked"
   :line2: "to prevent 1 damage, deal 1"
@@ -274,7 +274,7 @@
   :deck: "Squire"
   :title: "Fetch"
   :type: "Action"
-  :image: "squire/rapidshare-arrow.svg"
+  :icon: "rapidshare-arrow"
   :border_color: "#4d4"
   :line1: "Restore 1 <b>Health</b> to each"
   :line2: "player."
@@ -286,7 +286,7 @@
   :deck: "Squire"
   :title: "Resupply"
   :type: "Action"
-  :image: "squire/knapsack.svg"
+  :icon: "knapsack"
   :border_color: "#4d4"
   :line1: "An ally draws 2 cards."
   :line2: "You may take another <b>Action</b>."
