Add devastations; adjust border colors

--- a/data/artifacts.yml
+++ b/data/artifacts.yml
@@ -3,7 +3,7 @@
   :title: "Fire Breath Amulet"
   :type: "Artifact"
   :icon: "intricate-necklace"
-  :border_color: "#08f"
+  :border_color: "#b95"
   :line1: "<i>Reaction</i> - 2 Charges"
   :line2: ""
   :line3: "Deal 4 damage."
@@ -15,7 +15,7 @@
   :title: "Rod of Healing"
   :type: "Artifact"
   :icon: "winged-scepter"
-  :border_color: "#08f"
+  :border_color: "#b95"
   :line1: "<i>Reaction</i> - 2 Charges"
   :line2: ""
   :line3: "Restore 2 <b>Health</b>."
@@ -27,7 +27,7 @@
   :title: "Orb of the Seer"
   :type: "Artifact"
   :icon: "dragon-orb"
-  :border_color: "#08f"
+  :border_color: "#b95"
   :line1: "<i>Reaction</i> - 3 Charges"
   :line2: ""
   :line3: "Look at the top five cards of"
@@ -39,7 +39,7 @@
   :title: "Cloak of Recovery"
   :type: "Artifact"
   :icon: "cloak"
-  :border_color: "#08f"
+  :border_color: "#b95"
   :line1: "<i>Passive</i>"
   :line2: ""
   :line3: "At the end of your <b>Draw Step</b>, if"
@@ -51,7 +51,7 @@
   :title: "Lightning Crystal"
   :type: "Artifact"
   :icon: "unstable-orb"
-  :border_color: "#08f"
+  :border_color: "#b95"
   :line1: "<i>Passive</i>"
   :line2: ""
   :line3: "Whenever you draw a card"
@@ -63,7 +63,7 @@
   :title: "Tome of Tactics"
   :type: "Artifact"
   :icon: "enlightenment"
-  :border_color: "#08f"
+  :border_color: "#b95"
   :line1: "<i>Action</i> - <i>X</i> Charges"
   :line2: "Draw <i>X</i> cards."
   :line3: "<i>Passive</i>"
@@ -75,7 +75,7 @@
   :title: "Token of Luck"
   :type: "Artifact"
   :icon: "rupee"
-  :border_color: "#08f"
+  :border_color: "#b95"
   :line1: "<i>Reaction</i> - 3 Charges"
   :line2: "Name a card."
   :line3: "Reveal the top 3 cards of one"
@@ -87,7 +87,7 @@
   :title: "Belt of the Swift"
   :type: "Artifact"
   :icon: "black-belt"
-  :border_color: "#08f"
+  :border_color: "#b95"
   :line1: "<i>Reaction</i> - 3 Charges"
   :line2: "Refresh <i>any</i> player deck."
   :line3: "You and the owner of the deck"
