--- a/data/player_cards.yml
+++ b/data/player_cards.yml
@@ -4,7 +4,7 @@
   :title: "Strike"
   :type: "Action"
   :icon: "battle-axe"
-  :border_color: "#c22"
+  :border_color: "#b10"
   :line1: "Deal 3 damage."
   :line2: ""
   :line3: "If you <i>Strike</i> an enemy who"
@@ -16,7 +16,7 @@
   :title: "Block"
   :type: "Reaction"
   :icon: "checked-shield"
-  :border_color: "#c22"
+  :border_color: "#b10"
   :line1: "Prevent up to 2 damage from"
   :line2: "an enemy attack."
   :line3: ""
@@ -28,7 +28,7 @@
   :title: "Bash"
   :type: "Action"
   :icon: "shield-bash"
-  :border_color: "#c22"
+  :border_color: "#b10"
   :line1: "Stun an enemy you are"
   :line2: "engaged with."
   :line3: ""
@@ -78,7 +78,7 @@
   :title: "Burn"
   :type: "Action"
   :icon: "flamer"
-  :border_color: "#3bf"
+  :border_color: "#0ff"
   :line1: "<b>Scorch</b> an enemy."
   :line2: "Deal 3 damage to each enemy"
   :line3: "for each <b>Scorch</b> on them."
@@ -90,7 +90,7 @@
   :title: "Freeze"
   :type: "Action"
   :icon: "beveled-star"
-  :border_color: "#3bf"
+  :border_color: "#0ff"
   :line1: "Deal 3 damage and <b>Chill</b>"
   :line2: "an enemy."
   :line3: ""
@@ -102,7 +102,7 @@
   :title: "Shock"
   :type: "Reaction"
   :icon: "electric"
-  :border_color: "#3bf"
+  :border_color: "#0ff"
   :line1: "Draw a card."
   :line2: "Deal 2 damage to all"
   :line3: "<b>Scorched</b> enemies."
@@ -152,7 +152,7 @@
   :title: "Tackle"
   :type: "Action"
   :icon: "charging-bull"
-  :border_color: "#f22"
+  :border_color: "#f31"
   :line1: "Deal 6 damage."
   :line2: "Take 1 damage."
   :line3: ""
@@ -164,7 +164,7 @@
   :title: "Flurry"
   :type: "Action"
   :icon: "punch-blast"
-  :border_color: "#f22"
+  :border_color: "#f31"
   :line1: "<i>Multi-target</i>"
   :line2: "Deal 3 damage."
   :line3: ""
@@ -176,7 +176,7 @@
   :title: "Counter"
   :type: "Reaction"
   :icon: "thrust-bend"
-  :border_color: "#f22"
+  :border_color: "#f31"
   :line1: "Play when you are attacked to"
   :line2: "deal 2 damage to your"
   :line3: "attacker and draw a card."
@@ -189,7 +189,7 @@
   :title: "Drain"
   :type: "Action"
   :icon: "snake-tongue"
-  :border_color: "#444"
+  :border_color: "#666"
   :line1: "Deal 3 damage."
   :line2: "Restore 1 <b>Health</b> to yourself."
   :line3: "Draw a card."
@@ -201,7 +201,7 @@
   :title: "Misdirect"
   :type: "Reaction"
   :icon: "avoidance"
-  :border_color: "#444"
+  :border_color: "#666"
   :line1: "Play when an enemy attacks"
   :line2: "to prevent up to 2 damage and"
   :line3: "deal 2 damage to a different"
@@ -213,7 +213,7 @@
   :title: "Mimic"
   :type: "???"
   :icon: "two-shadows"
-  :border_color: "#444"
+  :border_color: "#666"
   :line1: "While this card is in your hand,"
   :line2: "treat it as if it were any card"
   :line3: "in an ally's hand."
@@ -226,7 +226,7 @@
   :title: "Blast"
   :type: "Action"
   :icon: "hypersonic-bolt"
-  :border_color: "#26e"
+  :border_color: "#02f"
   :line1: "Deal 4 damage."
   :line2: ""
   :line3: "<b>Combo</b>: <i>Energize</i>"
@@ -238,7 +238,7 @@
   :title: "Protect"
   :type: "Reaction"
   :icon: "aura"
-  :border_color: "#26e"
+  :border_color: "#02f"
   :line1: "<i>Multi-target</i>"
   :line2: "Prevent 1 damage."
   :line3: ""
@@ -250,7 +250,7 @@
   :title: "Unleash"
   :type: "Action"
   :icon: "glowing-hands"
-  :border_color: "#26e"
+  :border_color: "#02f"
   :line1: "<i>Multi-target</i>"
   :line2: "Deal 2 damage."
   :line3: ""
