--- a/data/devastations.yml
+++ b/data/devastations.yml
@@ -24,7 +24,7 @@
   :line6: ""
 -
   :deck: "Devastation"
-  :title: "Vengeance"
+  :title: "Necromancy"
   :type: "Devastation"
   :icon: "crowned-skull"
   :border_color: "#111"
