add tier 2 and tier 3 Red units

--- a/data/upgrade/units.yml
+++ b/data/upgrade/units.yml
@@ -15,3 +15,36 @@
   :primary_attack: "4"
   :secondary_attack: "2"
   :special_attack: "1"
+-
+  :deck: "Red"
+  :title: "Greymon"
+  :type: "Tier 2"
+  :icon: "wyvern"
+  :border_color: "#f31"
+  :upgrade_points: "40"
+  :plus_points: "10"
+  :line1: "Support: If own unit is Tier 2,"
+  :line2: "boost all attacks +3."
+  :line3: "Special: Counter PRI"
+  :line4: ""
+  :hp: "9"
+  :primary_attack: "6"
+  :secondary_attack: "4"
+  :special_attack: "0"
+-
+  :deck: "Red"
+  :title: "Metal Greymon"
+  :type: "Tier 3"
+  :icon: "wyvern"
+  :border_color: "#f31"
+  :upgrade_points: "30"
+  :plus_points: "10"
+  :line1: "Support: If own unit is Tier 3,"
+  :line2: "boost all attacks +5."
+  :line3: "Special: Counter PRI"
+  :line4: ""
+  :hp: "15"
+  :primary_attack: "7"
+  :secondary_attack: "5"
+  :special_attack: "0"
+  
