--- a/data/upgrade/units.yml
+++ b/data/upgrade/units.yml
@@ -6,45 +6,13 @@
   :icon: "wyvern"
   :border_color: "#f31"
   :upgrade_points: "0"
-  :plus_points: "20"
+  :plus_points: "2"
   :line1: "Support: Own PRI +3"
   :line2: ""
   :line3: "Special: Enemy PRI to 0"
   :line4: ""
-  :hp: "6"
-  :primary_attack: "4"
-  :secondary_attack: "2"
-  :special_attack: "1"
--
-  :deck: "Red"
-  :title: "Greymon"
-  :type: "Tier 2"
-  :icon: "wyvern"
-  :border_color: "#f31"
-  :upgrade_points: "40"
-  :plus_points: "10"
-  :line1: "Support: If own unit is Tier 2,"
-  :line2: "boost all attacks +3."
-  :line3: "Special: Counter PRI"
-  :line4: ""
-  :hp: "9"
-  :primary_attack: "6"
-  :secondary_attack: "4"
-  :special_attack: "0"
--
-  :deck: "Red"
-  :title: "Metal Greymon"
-  :type: "Tier 3"
-  :icon: "wyvern"
-  :border_color: "#f31"
-  :upgrade_points: "30"
-  :plus_points: "10"
-  :line1: "Support: If own unit is Tier 3,"
-  :line2: "boost all attacks +5."
-  :line3: "Special: Counter PRI"
-  :line4: ""
-  :hp: "15"
-  :primary_attack: "7"
-  :secondary_attack: "5"
-  :special_attack: "0"
+  :hp: "10"
+  :power_attack: "6"
+  :normal_attack: "4"
+  :special_attack: "2"
   
