--- a/data/upgrade/units.yml
+++ b/data/upgrade/units.yml
@@ -1,18 +1,98 @@
 # Red
 -
   :deck: "Red"
-  :title: "Agumon"
+  :title: "Red Unit 1"
   :type: "Tier 1"
   :icon: "wyvern"
   :border_color: "#f31"
   :upgrade_points: "0"
   :plus_points: "2"
-  :line1: "Support: Own PRI +3"
+  :line1: "Support: Own POW +5"
   :line2: ""
-  :line3: "Special: Enemy PRI to 0"
+  :line3: "Special: Enemy POW to 0"
   :line4: ""
   :hp: "10"
+  :power_attack: "5"
+  :normal_attack: "3"
+  :special_attack: "2"
+-
+  :deck: "Red"
+  :title: "Red Unit 2"
+  :type: "Tier 2"
+  :icon: "wyvern"
+  :border_color: "#f31"
+  :upgrade_points: "4"
+  :plus_points: "1"
+  :line1: "Support: If own unit is"
+  :line2: "Tier 2, own POW +9"
+  :line3: "Special: Counter POW"
+  :line4: ""
+  :hp: "15"
+  :power_attack: "8"
+  :normal_attack: "5"
+  :special_attack: "0"
+-
+  :deck: "Red"
+  :title: "Red Unit 3"
+  :type: "Tier 3"
+  :icon: "wyvern"
+  :border_color: "#f31"
+  :upgrade_points: "5"
+  :plus_points: "2"
+  :line1: "Support: Own SPEC +6"
+  :line2: ""
+  :line3: "Special: First Attack"
+  :line4: ""
+  :hp: "22"
+  :power_attack: "12"
+  :normal_attack: "7"
+  :special_attack: "4"
+# Blue
+-
+  :deck: "Blue"
+  :title: "Blue Unit 1"
+  :type: "Tier 1"
+  :icon: "horned-reptile"
+  :border_color: "#f31"
+  :upgrade_points: "0"
+  :plus_points: "2"
+  :line1: "Support: Own HP +4"
+  :line2: ""
+  :line3: "Special: Negate enemy Support"
+  :line4: "effect."
+  :hp: "14"
+  :power_attack: "4"
+  :normal_attack: "3"
+  :special_attack: "1"
+-
+  :deck: "Blue"
+  :title: "Blue Unit 2"
+  :type: "Tier 2"
+  :icon: "horned-reptile"
+  :border_color: "#f31"
+  :upgrade_points: "4"
+  :plus_points: "1"
+  :line1: "Support: Draw 2 cards."
+  :line2: "Own HP +2"
+  :line3: "Special: Enemy POW to 0"
+  :line4: ""
+  :hp: "19"
   :power_attack: "6"
   :normal_attack: "4"
-  :special_attack: "2"
-  
+  :special_attack: "3"
+-
+  :deck: "Blue"
+  :title: "Blue Unit 3"
+  :type: "Tier 3"
+  :icon: "horned-reptile"
+  :border_color: "#f31"
+  :upgrade_points: "5"
+  :plus_points: "2"
+  :line1: "Support: Negate enemy"
+  :line2: "Support effect."
+  :line3: "Special: Lifesteal"
+  :line4: ""
+  :hp: "28"
+  :power_attack: "9"
+  :normal_attack: "5"
+  :special_attack: "3"
