update some wording with Free Action

--- a/data/tairos/artifacts.yml
+++ b/data/tairos/artifacts.yml
@@ -4,7 +4,7 @@
   :type: "Artifact"
   :icon: "intricate-necklace"
   :border_color: "#b95"
-  :line1: "<i>Reaction</i> - 2 Charges"
+  :line1: "<i>Free Action</i> - 2 Charges"
   :line2: ""
   :line3: "Deal 4 damage."
   :line4: ""
@@ -16,7 +16,7 @@
   :type: "Artifact"
   :icon: "winged-scepter"
   :border_color: "#b95"
-  :line1: "<i>Reaction</i> - 2 Charges"
+  :line1: "<i>Free Action</i> - 2 Charges"
   :line2: ""
   :line3: "Restore 2 <b>Health</b>."
   :line4: "<i>or</i>"
@@ -28,7 +28,7 @@
   :type: "Artifact"
   :icon: "dragon-orb"
   :border_color: "#b95"
-  :line1: "<i>Reaction</i> - 3 Charges"
+  :line1: "<i>Free Action</i> - 3 Charges"
   :line2: ""
   :line3: "Look at the top five cards of"
   :line4: "one of your decks and put"
@@ -76,7 +76,7 @@
   :type: "Artifact"
   :icon: "rupee"
   :border_color: "#b95"
-  :line1: "<i>Reaction</i> - 3 Charges"
+  :line1: "<i>Free Action</i> - 3 Charges"
   :line2: "Name a card."
   :line3: "Reveal the top 3 cards of one"
   :line4: "of your decks. If you reveal the"
@@ -88,7 +88,7 @@
   :type: "Artifact"
   :icon: "black-belt"
   :border_color: "#b95"
-  :line1: "<i>Reaction</i> - 3 Charges"
+  :line1: "<i>Free Action</i> - 3 Charges"
   :line2: "Refresh <i>any</i> player deck."
   :line3: "You and the owner of the deck"
   :line4: "may draw a card."
