--- a/data/tairos/player_cards.yml
+++ b/data/tairos/player_cards.yml
@@ -18,7 +18,7 @@
   :icon: "checked-shield"
   :border_color: "#b10"
   :line1: "Prevent up to 2 damage from"
-  :line2: "an enemy attack."
+  :line2: "<i>any</i> enemy attack."
   :line3: ""
   :line4: "If you <i>Block</i> a <b>Hunter</b> attack,"
   :line5: "you are attacked instead,"
@@ -54,10 +54,10 @@
   :type: "Reaction"
   :icon: "dodging"
   :border_color: "#ccc"
-  :line1: "Prevent up to 2 damage to you."
+  :line1: "Prevent up to 2 damage to <i>you</i>."
   :line2: "<i>and/or</i>"
   :line3: "Prevent 1 status from being"
-  :line4: "applied to you."
+  :line4: "applied to <i>you</i>."
   :line5: ""
   :line6: ""
 -
@@ -100,7 +100,7 @@
 -
   :deck: "Elementalist"
   :title: "Shock"
-  :type: "Reaction"
+  :type: "Free Action"
   :icon: "electric"
   :border_color: "#0ff"
   :line1: "Draw a card."
@@ -177,7 +177,7 @@
   :type: "Reaction"
   :icon: "thrust-bend"
   :border_color: "#f31"
-  :line1: "Play when you are attacked to"
+  :line1: "Play when <i>you</i> are attacked to"
   :line2: "deal 2 damage to your"
   :line3: "attacker and draw a card."
   :line4: ""
@@ -202,12 +202,10 @@
   :type: "Reaction"
   :icon: "avoidance"
   :border_color: "#666"
-  :line1: "Play when an enemy attacks"
-  :line2: "to prevent up to 2 damage and"
-  :line3: "deal 2 damage to a different"
+  :line1: "Prevent up to 2 damage from"
+  :line2: "<i>any</i> enemy attack and"
+  :line3: "deal 2 damge to a different"
   :line4: "enemy."
-  :line5: ""
-  :line6: ""
 -
   :deck: "Shadow"
   :title: "Mimic"
@@ -242,7 +240,7 @@
   :line1: "<i>Multi-target</i>"
   :line2: "Prevent 1 damage."
   :line3: ""
-  :line4: "You may discard up to two"
+  :line4: "You may discard up to 2"
   :line5: "cards to prevent up to 3 more"
   :line6: "damage per card."
 -
@@ -254,7 +252,7 @@
   :line1: "<i>Multi-target</i>"
   :line2: "Deal 2 damage."
   :line3: ""
-  :line4: "You may discard up to two"
+  :line4: "You may discard up to 2"
   :line5: "cards to deal 3 more damage"
   :line6: "per card."
 # Squire
