--- a/data/tairos/races.yml
+++ b/data/tairos/races.yml
@@ -21,7 +21,7 @@
   :border_color: "#81e"
   :line1: "<i>Racial Bonus</i>: +2 <b>Charges</b>"
   :line2: "Your max hand size is 8."
-  :line3: "<i>Reaction</i> - 1 Charge"
+  :line3: "<i>Free Action</i> - 1 Charge"
   :line4: "Look at the top card of"
   :line5: "one of your decks. Put it back"
   :line6: "on top or bottom of the deck."
