disable Tome of Tactics for printing space

--- a/data/tairos/artifacts.yml
+++ b/data/tairos/artifacts.yml
@@ -58,18 +58,19 @@
   :line4: "outside of your <b>Draw Step</b>,"
   :line5: "deal 1 damage."
   :line6: ""
--
-  :deck: "Artifact"
-  :title: "Tome of Tactics"
-  :type: "Artifact"
-  :icon: "enlightenment"
-  :border_color: "#b95"
-  :line1: "<i>Action</i> - <i>X</i> Charges"
-  :line2: "Draw <i>X</i> cards."
-  :line3: "<i>Passive</i>"
-  :line4: "When you refresh a deck, you"
-  :line5: "may leave up to 5 cards in"
-  :line6: "its discard pile."
+## Temporarily commented out to avoid printing an extra page
+# -
+#   :deck: "Artifact"
+#   :title: "Tome of Tactics"
+#   :type: "Artifact"
+#   :icon: "enlightenment"
+#   :border_color: "#b95"
+#   :line1: "<i>Action</i> - <i>X</i> Charges"
+#   :line2: "Draw <i>X</i> cards."
+#   :line3: "<i>Passive</i>"
+#   :line4: "When you refresh a deck, you"
+#   :line5: "may leave up to 5 cards in"
+#   :line6: "its discard pile."
 -
   :deck: "Artifact"
   :title: "Token of Luck"
