--- a/data/ramsey/cards.yml
+++ b/data/ramsey/cards.yml
@@ -5,7 +5,7 @@
   :type: "Money"
   :icon: "banknote"
   :border_color: "#85bb65"
-  :line1: "Gain $1 to spend this round"
+  :line1: "Gain $1 to budget this round."
   :line2: ""
   :line3: ""
   :line4: ""
@@ -21,7 +21,7 @@
   :type: "Money"
   :icon: "take-my-money"
   :border_color: "#85bb65"
-  :line1: "Gain $2 to spend this round"
+  :line1: "Gain $2 to budget this round."
   :line2: ""
   :line3: ""
   :line4: ""
@@ -31,7 +31,7 @@
   :type: "Money"
   :icon: "money-stack"
   :border_color: "#85bb65"
-  :line1: "Gain $3 to spend this round"
+  :line1: "Gain $3 to budget this round."
   :line2: ""
   :line3: ""
   :line4: ""
