add sample time and careers

--- a/data/ramsey/cards.yml
+++ b/data/ramsey/cards.yml
@@ -1,14 +1,28 @@
 ## Starting Deck
 -
-  :deck: "money"
+  :deck: "starter"
   :title: "Single Bill"
   :type: "Money"
   :icon: "banknote"
   :border_color: "#85bb65"
-  :line1: "Gain $1 to budget this round."
+  :line1: "Gain $1 to budget this turn."
   :line2: ""
   :line3: ""
   :line4: ""
+  :line5: ""
+  :line6: ""
+-
+  :deck: "starter"
+  :title: "One Hour"
+  :type: "Time"
+  :icon: "sands-of-time"
+  :border_color: "#ffdd3c"
+  :line1: "Gain 1 Hour to spend this turn."
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
 # TODO: other starting cards
 
 
@@ -35,6 +49,81 @@
   :line2: ""
   :line3: ""
   :line4: ""
+# Time
 
-# TODO: Points
-# TODO: Actions
+-
+  :deck: "time"
+  :title: "Two Hours"
+  :type: "Time"
+  :icon: "hourglass"
+  :border_color: "#ffdd3c"
+  :line1: "Gain 2 Hours to spend this turn."
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
+-
+  :deck: "time"
+  :title: "Three Hours"
+  :type: "Time"
+  :icon: "extra-time"
+  :border_color: "#ffdd3c"
+  :line1: "Gain 3 Hours to spend this turn."
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
+# Jobs
+-
+  :deck: "career"
+  :title: "Doctor"
+  :type: "Career"
+  :icon: "stethoscope"
+  :border_color: "#296E01"
+  :line1: "Time Cost: 4 Hours"
+  :line2: "Income: $8"
+  :line3: ""
+  :line4: "You may discard 1 Hour to"
+  :line5: "negate the effect of one Medical"
+  :line6: "Murphy Card on yourself."
+-
+  :deck: "career"
+  :title: "Electrician"
+  :type: "Career"
+  :icon: "electrical-resistance"
+  :border_color: "#296E01"
+  :line1: "Time Cost: 3 Hours"
+  :line2: "Income: $5"
+  :line3: ""
+  :line4: "You may discard 1 Hour to"
+  :line5: "negate the effect of one"
+  :line6: "Home Murphy Card on yourself."
+-
+  :deck: "career"
+  :title: "Teacher"
+  :type: "Career"
+  :icon: "graduate-cap"
+  :border_color: "#296E01"
+  :line1: "Time Cost: 2 Hours"
+  :line2: "Income: $3"
+  :line3: ""
+  :line4: "Whenever you spend time for"
+  :line5: "<b>Pay</b>, you may spend 1 extra"
+  :line6: "Hour to gain 1 LP."
+-
+  :deck: "career"
+  :title: "Side-Hustle"
+  :type: "Career"
+  :icon: "alarm-clock"
+  :border_color: "#296E01"
+  :line1: "Time Cost: 1 Hours"
+  :line2: "Income: $1"
+  :line3: ""
+  :line4: "For every side-hustle you do"
+  :line5: "in a turn beyond the first,"
+  :line6: "lose one LP."
+
+
+# TODO: Points - Live/Give
