--- a/data/upgrade/cards2.yml
+++ b/data/upgrade/cards2.yml
@@ -4,8 +4,9 @@
   :deck: "Red"
   :title: "Rookie 1"
   :type: "R"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "mono-wheel-robot"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :plus_points: "20"
   :line1: "Support: Own POW +300"
   :line2: ""
@@ -19,8 +20,9 @@
   :deck: "Red"
   :title: "Rookie 2"
   :type: "R"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "mono-wheel-robot"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :plus_points: "20"
   :line1: "Support: Own POW +300"
   :line2: ""
@@ -34,8 +36,9 @@
   :deck: "Red"
   :title: "Rookie 3"
   :type: "R"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "mono-wheel-robot"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :plus_points: "20"
   :line1: "Support: Own POW +300"
   :line2: ""
@@ -50,8 +53,9 @@
   :deck: "Red"
   :title: "Rookie 4"
   :type: "R"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "mono-wheel-robot"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :plus_points: "20"
   :line1: "Support: Own NRM +300"
   :line2: ""
@@ -65,8 +69,9 @@
   :deck: "Red"
   :title: "Rookie 5"
   :type: "R"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "mono-wheel-robot"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :plus_points: "20"
   :line1: "Support: Own NRM +300"
   :line2: ""
@@ -80,8 +85,9 @@
   :deck: "Red"
   :title: "Rookie 6"
   :type: "R"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "mono-wheel-robot"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :plus_points: "20"
   :line1: "Support: Own NRM +300"
   :line2: ""
@@ -96,8 +102,9 @@
   :deck: "Red"
   :title: "Rookie 7"
   :type: "R"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "mono-wheel-robot"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :plus_points: "20"
   :line1: "Support: Own SPC +300"
   :line2: ""
@@ -111,8 +118,9 @@
   :deck: "Red"
   :title: "Rookie 8"
   :type: "R"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "mono-wheel-robot"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :plus_points: "20"
   :line1: "Support: Own SPC +300"
   :line2: ""
@@ -126,8 +134,9 @@
   :deck: "Red"
   :title: "Rookie 9"
   :type: "R"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "mono-wheel-robot"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :plus_points: "20"
   :line1: "Support: Own SPC +300"
   :line2: ""
@@ -141,8 +150,9 @@
   :deck: "Red"
   :title: "Rookie 10"
   :type: "R"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "mono-wheel-robot"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :plus_points: "20"
   :line1: "Support: Foe attacks -200"
   :line2: ""
@@ -158,8 +168,9 @@
   :deck: "Red"
   :title: "Champion 1"
   :type: "C"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "battle-mech"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :upgrade_points: "30"
   :plus_points: "10"
   :line1: "Support: Own attacks +200"
@@ -174,8 +185,9 @@
   :deck: "Red"
   :title: "Champion 2"
   :type: "C"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "battle-mech"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :upgrade_points: "30"
   :plus_points: "10"
   :line1: "Support: Own attacks +200"
@@ -190,8 +202,9 @@
   :deck: "Red"
   :title: "Champion 3"
   :type: "C"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "battle-mech"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :upgrade_points: "30"
   :plus_points: "10"
   :line1: "Support: Attack first"
@@ -206,8 +219,9 @@
   :deck: "Red"
   :title: "Champion 4"
   :type: "C"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "battle-mech"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :upgrade_points: "30"
   :plus_points: "10"
   :line1: "Support: Attack rirst"
@@ -222,8 +236,9 @@
   :deck: "Red"
   :title: "Champion 5"
   :type: "C"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "battle-mech"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :upgrade_points: "30"
   :plus_points: "10"
   :line1: "Support: Jam foe Support"
@@ -238,8 +253,9 @@
   :deck: "Red"
   :title: "Champion 6"
   :type: "C"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "battle-mech"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :upgrade_points: "30"
   :plus_points: "10"
   :line1: "Support: Jam foe Support"
@@ -256,8 +272,9 @@
   :deck: "Red"
   :title: "Ultimate 1"
   :type: "U"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "robot-golem"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :upgrade_points: "30"
   :plus_points: "20"
   :line1: "Support: Own attacks +200"
@@ -272,8 +289,9 @@
   :deck: "Red"
   :title: "Ultimate 2"
   :type: "U"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "robot-golem"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :upgrade_points: "30"
   :plus_points: "20"
   :line1: "Support: Own HP +200"
@@ -288,8 +306,9 @@
   :deck: "Red"
   :title: "Ultimate 3"
   :type: "U"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "robot-golem"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :upgrade_points: "30"
   :plus_points: "20"
   :line1: "Support: Own HP +200"
@@ -304,13 +323,14 @@
   :deck: "Red"
   :title: "Ultimate 4"
   :type: "U"
-  :icon: "wyvern"
-  :border_color: "#f31"
+  :icon: "robot-golem"
+  :border_color: "#fff"
+  # :border_color: "#f31"
   :upgrade_points: "30"
   :plus_points: "20"
   :line1: "Support: Own attacks +200"
   :line2: ""
-  :line3: "Special: POW to 0"
+  :line3: "Special: Foe POW to 0"
   :line4: ""
   :hp: "1200"
   :power_attack: "700"
@@ -322,8 +342,9 @@
   :deck: "Option"
   :title: "Recovery Pack A"
   :type: "Option"
-  :icon: "knapsack"
-  :border_color: "#ddd"
+  :icon: "techno-heart"
+  :border_color: "#fff"
+  # :border_color: "#ddd"
   :line1: "Own HP +300"
   :line2: ""
   :line3: ""
@@ -332,8 +353,9 @@
   :deck: "Option"
   :title: "Recovery Pack B"
   :type: "Option"
-  :icon: "knapsack"
-  :border_color: "#ddd"
+  :icon: "techno-heart"
+  :border_color: "#fff"
+  # :border_color: "#ddd"
   :line1: "Own HP +300"
   :line2: ""
   :line3: ""
@@ -343,7 +365,8 @@
   :title: "Disrupter Ray A"
   :type: "Option"
   :icon: "flower-twirl"
-  :border_color: "#ddd"
+  :border_color: "#fff"
+  # :border_color: "#ddd"
   :line1: "Change foe attack:"
   :line2: "POW -> NRM"
   :line3: "NRM -> SPC"
@@ -353,7 +376,8 @@
   :title: "Disrupter Ray B"
   :type: "Option"
   :icon: "flower-twirl"
-  :border_color: "#ddd"
+  :border_color: "#fff"
+  # :border_color: "#ddd"
   :line1: "Change foe attack:"
   :line2: "POW -> NRM"
   :line3: "NRM -> SPC"
@@ -362,8 +386,9 @@
   :deck: "Option"
   :title: "Power Pack A"
   :type: "Option"
-  :icon: "knapsack"
-  :border_color: "#ddd"
+  :icon: "processor"
+  :border_color: "#fff"
+  # :border_color: "#ddd"
   :line1: "Own attacks +300"
   :line2: ""
   :line3: ""
@@ -372,8 +397,9 @@
   :deck: "Option"
   :title: "Power Pack B"
   :type: "Option"
-  :icon: "knapsack"
-  :border_color: "#ddd"
+  :icon: "processor"
+  :border_color: "#fff"
+  # :border_color: "#ddd"
   :line1: "Own attacks +300"
   :line2: ""
   :line3: ""
@@ -382,18 +408,20 @@
   :deck: "Option"
   :title: "Role Reversal"
   :type: "Option"
-  :icon: "knapsack"
-  :border_color: "#ddd"
+  :icon: "back-forth"
+  :border_color: "#fff"
+  # :border_color: "#ddd"
   :line1: "If own level is lower than foe's,"
   :line2: "swap HP with foe."
   :line3: ""
   :line4: ""
 -
   :deck: "Option"
-  :title: "Narrow Escape"
+  :title: "Race Condition"
   :type: "Option"
-  :icon: "knapsack"
-  :border_color: "#ddd"
+  :icon: "paper-arrow"
+  :border_color: "#fff"
+  # :border_color: "#ddd"
   :line1: "If you have no cards in hand,"
   :line2: "set foe's attacks to 0."
   :line3: ""
@@ -401,19 +429,21 @@
 -
   :deck: "Upgrade Option"
   :title: "Re-skin"
-  :type: "Upgrade Option"
-  :icon: "knapsack"
-  :border_color: "#ddd"
+  :type: "Upgrade Opt."
+  :icon: "recycle"
+  :border_color: "#fff"
+  # :border_color: "#ddd"
   :line1: "You may upgrade to another"
   :line2: "unit at the same level."
   :line3: "You must still pay upgrade cost."
   :line4: ""
 -
   :deck: "Upgrade Option"
-  :title: "Re-release"
-  :type: "Upgrade Option"
-  :icon: "knapsack"
-  :border_color: "#ddd"
+  :title: "Legacy Code"
+  :type: "Upgrade Opt."
+  :icon: "save-arrow"
+  :border_color: "#fff"
+  # :border_color: "#ddd"
   :line1: "You may downgrade your unit."
   :line2: ""
   :line3: "Double its HP if you do."
