WIP new Tairos cards

--- a/data/tairos/enemies.yml
+++ b/data/tairos/enemies.yml
@@ -6,10 +6,10 @@
   :icon: "toad-teeth"
   :border_color: "#444"
   :hp: "12"
-  :attack: "3"
+  :attack: "4"
   :line1: "Stun any player who takes 3 or"
-  :line2: "more damage from <i>Toxic Toad</i>."
-  :line3: ""
+  :line2: "more damage from <i>Toxic Toad</i>"
+  :line3: "in a single round."
   :line4: ""
 -
   :deck: "Enemy"
@@ -17,7 +17,7 @@
   :type: "Enemy"
   :icon: "harpy"
   :border_color: "#444"
-  :hp: "14"
+  :hp: "12"
   :attack: "4"
   :line1: "<b>Hunter</b>: Most cards in hand"
   :line2: "<b>Engage</b>: Gain <b>Fatigue</b>"
@@ -41,9 +41,9 @@
   :type: "Enemy"
   :icon: "ifrit"
   :border_color: "#444"
-  :hp: "16"
-  :attack: "3"
-  :line1: "<b>Encounter</b>: Deal 3 damage to"
+  :hp: "12"
+  :attack: "4"
+  :line1: "<b>Encounter</b>: Deal 4 damage to"
   :line2: "the player with the most <b>Health</b>."
   :line3: "<b>Hunter</b>: Most <b>Health</b>"
   :line4: ""
@@ -65,8 +65,8 @@
   :type: "Enemy"
   :icon: "horned-reptile"
   :border_color: "#444"
-  :hp: "10"
-  :attack: "4"
+  :hp: "8"
+  :attack: "6"
   :line1: "<b>Encounter</b>: Stun the player"
   :line2: "with the least <b>Health</b>."
   :line3: "<b>Hunter</b>: Least <b>Health</b>"
@@ -89,11 +89,47 @@
   :type: "Enemy"
   :icon: "spark-spirit"
   :border_color: "#444"
-  :hp: "10"
-  :attack: "5"
+  :hp: "12"
+  :attack: "4"
   :line1: "<b>Hunter</b>: Least cards in hand"
   :line2: "<b>Engage</b>: Gain <b>Fatigue</b>."
   :line3: ""
+  :line4: ""
+-
+  :deck: "Enemy"
+  :title: "Black Guard"
+  :type: "Enemy"
+  :icon: "" # TODO
+  :border_color: "#444"
+  :hp: "18"
+  :attack: "2"
+  :line1: "Other enemies cannot be attacked"
+  :line2: "while <i>Black Gaurd</i> is alive."
+  :line3: ""
+  :line4: ""
+-
+  :deck: "Enemy"
+  :title: "Flamespitter"
+  :type: "Enemy"
+  :icon: "" # TODO
+  :border_color: "#444"
+  :hp: "12"
+  :attack: "2"
+  :line1: "When <i>Flamespitter</i> attacks,"
+  :line2: "deal 1 damage to ALL players."
+  :line3: ""
+  :line4: ""
+-
+  :deck: "Enemy"
+  :title: "Voidling"
+  :type: "Enemy"
+  :icon: "" # TODO
+  :border_color: "#444"
+  :hp: "12"
+  :attack: "4"
+  :line1: "<i>Voidling</i> can only be"
+  :line2: "damaged by the player who is"
+  :line3: "engaged with it."
   :line4: ""
 # Greater Enemies
 -
@@ -105,7 +141,7 @@
   :hp: "20"
   :attack: "2"
   :line1: "Cannot be engaged."
-  :line2: "Attacks all players."
+  :line2: "Attacks ALL players."
   :line3: ""
   :line4: ""
 -
@@ -119,4 +155,16 @@
   :line1: "Whenever <i>Soul Reaper</i> deals"
   :line2: "damage, it gains <b>Health</b> equal"
   :line3: "to half of the damage dealt"
-  :line4: "(rounded down)."
+  :line4: "(rounded up)."
+-
+  :deck: "Enemy"
+  :title: "Warlord"
+  :type: "Greater Enemy"
+  :icon: "" # TODO
+  :border_color: "#444"
+  :hp: "20"
+  :attack: "5"
+  :line1: "Other enemies have +1 ATK"
+  :line2: ""
+  :line3: ""
+  :line4: ""
