--- a/data/tairos/player_cards.yml
+++ b/data/tairos/player_cards.yml
@@ -56,8 +56,8 @@
   :border_color: "#ccc"
   :line1: "Prevent up to 2 damage to <i>you</i>."
   :line2: "<i>and/or</i>"
-  :line3: "Prevent 1 status from being"
-  :line4: "applied to <i>you</i>."
+  :line3: "Prevent 1 status effect from"
+  :line4: "being applied to <i>you</i>."
   :line5: ""
   :line6: ""
 -
@@ -117,7 +117,7 @@
   :icon: "heart-plus"
   :border_color: "#492"
   :line1: "Restore 2 <b>Health</b> to any player."
-  :line2: "Remove or duplicate 1 <b>Status</b>"
+  :line2: "Remove or duplicate 1 status effect"
   :line3: "on any player."
   :line4: ""
   :line5: "<i>You may choose a different</i>"
@@ -141,8 +141,8 @@
   :icon: "explosive-meeting"
   :border_color: "#492"
   :line1: "Play when an ally deals 5"
-  :line2: "or more damage to deal 5"
-  :line3: "damage."
+  :line2: "or more damage in a single"
+  :line3: "hit to deal 5 damage."
   :line4: ""
   :line5: "<i>You may target a different</i>"
   :line6: "<i>enemy than your ally.</i>"
@@ -291,4 +291,153 @@
   :line3: ""
   :line4: "<i>You cannot Resupply more than</i>"
   :line5: "<i>once per Round.</i>"
+  :line6: ""
+
+# Alchemist
+-
+  :deck: "Alchemist"
+  :title: ""
+  :type: ""
+  :icon: ""
+  :border_color: ""
+  :line1: "Buff" # could be like bardic inspiration - one-time use
+  :line2: ""     #  could have a time-limited effect
+  :line3: "Offense"
+  :line4: ""
+  :line5: "Defense"
+  :line6: ""
+-
+  :deck: "Alchemist"
+  :title: ""
+  :type: ""
+  :icon: ""
+  :border_color: ""
+  :line1: "Damage & Debuff"
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: "Combo:"
+  :line6: "The enemy damaged by this card loses all card text until the end of this round" # ???
+-
+  :deck: "Alchemist"
+  :title: ""
+  :type: ""
+  :icon: ""
+  :border_color: ""
+  :line1: "Heal and/or Cure"
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
+# Mauler
+-
+  :deck: "Mauler"
+  :title: "Crush"
+  :type: ""
+  :icon: ""
+  :border_color: ""
+  :line1: "Deal 4 damage"
+  :line2: ""
+  :line3: ""
+  :line4: "Combo: <i>Pulverize</i>"
+  :line5: "Deal 8 damage"
+  :line6: ""
+-
+  :deck: "Mauler"
+  :title: "Bullrush"
+  :type: ""
+  :icon: ""
+  :border_color: ""
+  :line1: "Speed; Rapid Strike"
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
+-
+  :deck: "Mauler"
+  :title: "Overwhelm"
+  :type: ""
+  :icon: ""
+  :border_color: ""
+  :line1: "Big swing."
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
+# Knifejack
+-
+  :deck: "Knifejack"
+  :title: "Whirlwind" # TODO: make this a verb
+  :type: ""
+  :icon: ""
+  :border_color: ""
+  :line1: "Deal 2 damage to"
+  :line2: "ALL enemies."
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
+-
+  :deck: "Knifejack"
+  :title: "Rapid Strike"
+  :type: ""
+  :icon: ""
+  :border_color: ""
+  :line1: "Deal 2 damage."
+  :line2: "Draw a card."
+  :line3: "You may take another <b>Action</b>."
+  :line4: ""
+  :line5: ""
+  :line6: ""
+-
+  :deck: "Knifejack"
+  :title: "Nimble Stride"
+  :type: ""
+  :icon: ""
+  :border_color: ""
+  :line1: ""
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
+# Illusionist
+-
+  :deck: "Illusionist"
+  :title: "Fear / Illude"
+  :type: ""
+  :icon: ""
+  :border_color: ""
+  :line1: ""
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
+-
+  :deck: "Illusionist"
+  :title: "Reflect / Mirror"
+  :type: ""
+  :icon: ""
+  :border_color: ""
+  :line1: ""
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
+-
+  :deck: "Illusionist"
+  :title: "Duplicate"
+  :type: ""
+  :icon: ""
+  :border_color: ""
+  :line1: ""
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: ""
   :line6: ""
