--- a/data/tairos/artifacts.yml
+++ b/data/tairos/artifacts.yml
@@ -20,7 +20,7 @@
   :line2: ""
   :line3: "Restore 2 <b>Health</b>."
   :line4: "<i>or</i>"
-  :line5: "Remove 1 <b>Status</b>."
+  :line5: "Remove 1 status effect."
   :line6: ""
 -
   :deck: "Artifact"
@@ -42,10 +42,10 @@
   :border_color: "#b95"
   :line1: "<i>Passive</i>"
   :line2: ""
-  :line3: "At the end of your <b>Draw Step</b>, if"
-  :line4: "you have exactly one card in"
-  :line5: "hand, you may draw a card."
-  :line6: ""
+  :line3: "At the end of your <b>Draw Step</b>,"
+  :line4: "if you have one or fewer cards in"
+  :line5: "your hand, you may draw"
+  :line6: "one extra card."
 -
   :deck: "Artifact"
   :title: "Lightning Crystal"
@@ -58,19 +58,6 @@
   :line4: "outside of your <b>Draw Step</b>,"
   :line5: "deal 1 damage."
   :line6: ""
-## Temporarily commented out to avoid printing an extra page
-# -
-#   :deck: "Artifact"
-#   :title: "Tome of Tactics"
-#   :type: "Artifact"
-#   :icon: "enlightenment"
-#   :border_color: "#b95"
-#   :line1: "<i>Action</i> - <i>X</i> Charges"
-#   :line2: "Draw <i>X</i> cards."
-#   :line3: "<i>Passive</i>"
-#   :line4: "When you refresh a deck, you"
-#   :line5: "may leave up to 5 cards in"
-#   :line6: "its discard pile."
 -
   :deck: "Artifact"
   :title: "Token of Luck"
@@ -93,5 +80,41 @@
   :line2: "Refresh <i>any</i> player deck."
   :line3: "You and the owner of the deck"
   :line4: "may draw a card."
-  :line5: "<i>You cannot draw 2 cards from</i>"
-  :line6: "<i>this effect.</i>"
+  :line5: "<i>(You draw two cards if you</i>"
+  :line6: "<i>are the owner.)</i>"
+-
+  :deck: "Artifact"
+  :title: "Tome of Tactics"
+  :type: "Artifact"
+  :icon: "enlightenment"
+  :border_color: "#b95"
+  :line1: "<i>Action</i> - <i>X</i> Charges"
+  :line2: "Draw <i>X</i> cards."
+  :line3: "<i>Passive</i>"
+  :line4: "When you refresh a deck, you"
+  :line5: "may leave up to 5 cards in"
+  :line6: "its discard pile."
+-
+  :deck: "Artifact"
+  :title: "Golden Hourglass"
+  :type: "Artifact"
+  :icon: "" # TODO
+  :border_color: "#b95"
+  :line1: "<i>Free Action</i> - 5 Charges"
+  :line2: ""
+  :line3: "Take another turn after"
+  :line4: "this one."
+  :line5: ""
+  :line6: ""
+-
+  :deck: "Artifact"
+  :title: "Enigmatic Device"
+  :type: "Artifact"
+  :icon: "" # TODO
+  :border_color: "#b95"
+  :line1: "<i>Free Action</i> - 3 Charges"
+  :line2: ""
+  :line3: "You may give/take up to three"
+  :line4: "cards to/from other players."
+  :line5: "You must get permission before"
+  :line6: "taking a card."
