add new player cards!

--- a/data/tairos/player_cards.yml
+++ b/data/tairos/player_cards.yml
@@ -43,11 +43,11 @@
   :icon: "high-shot"
   :border_color: "#ccc"
   :line1: "Deal 3 damage."
-  :line2: ""
   :line3: "If you've taken no damage"
   :line4: "this <b>Round</b>, deal 5 damage"
-  :line5: "instead."
-  :line6: ""
+  :line6: "instead."
+  :line5: "<b>Combo</b>: <i>Volley</i>"
+  :line2: "Deal 2 damage to ALL enemies."
 -
   :deck: "Ranger"
   :title: "Evade"
@@ -297,147 +297,147 @@
 -
   :deck: "Alchemist"
   :title: ""
-  :type: ""
+  :type: "Reaction"
   :icon: ""
   :border_color: ""
-  :line1: "Buff" # could be like bardic inspiration - one-time use
-  :line2: ""     #  could have a time-limited effect
-  :line3: "Offense"
+  :line1: ""
+  :line2: ""
+  :line3: ""
   :line4: ""
-  :line5: "Defense"
+  :line5: ""
   :line6: ""
 -
   :deck: "Alchemist"
-  :title: ""
-  :type: ""
+  :title: "Contaminate"
+  :type: "Action"
   :icon: ""
   :border_color: ""
-  :line1: "Damage & Debuff"
-  :line2: ""
-  :line3: ""
-  :line4: ""
-  :line5: "Combo:"
-  :line6: "The enemy damaged by this card loses all card text until the end of this round" # ???
+  :line1: "Deal 1 damage."
+  :line2: "For the rest of this <b>Round</b>,"
+  :line3: "increase all damage done to the"
+  :line4: "target by 2."
+  :line5: ""
+  :line6: ""
 -
   :deck: "Alchemist"
-  :title: ""
-  :type: ""
+  :title: "Heal"
+  :type: "Action"
   :icon: ""
   :border_color: ""
-  :line1: "Heal and/or Cure"
+  :line1: "Restore 3 <b>Health</b> to any player."
   :line2: ""
-  :line3: ""
-  :line4: ""
+  :line3: "<b>Combo</b>: <i>Envigorate</i>"
+  :line4: "That player draws 2 cards."
   :line5: ""
   :line6: ""
 # Mauler
 -
   :deck: "Mauler"
   :title: "Crush"
-  :type: ""
+  :type: "Action"
   :icon: ""
   :border_color: ""
-  :line1: "Deal 4 damage"
+  :line1: "Deal 4 damage."
   :line2: ""
-  :line3: ""
-  :line4: "Combo: <i>Pulverize</i>"
-  :line5: "Deal 8 damage"
-  :line6: ""
--
-  :deck: "Mauler"
-  :title: "Bullrush"
-  :type: ""
-  :icon: ""
-  :border_color: ""
-  :line1: "Speed; Rapid Strike"
-  :line2: ""
-  :line3: ""
-  :line4: ""
+  :line3: "<b>Combo</b>: <i>Pulverize</i>"
+  :line4: "Deal 8 damage."
   :line5: ""
   :line6: ""
 -
   :deck: "Mauler"
-  :title: "Overwhelm"
-  :type: ""
+  :title: "Endure"
+  :type: "Reaction"
   :icon: ""
   :border_color: ""
-  :line1: "Big swing."
+  :line1: "Prevent up to 3 damage to <i>you</i>."
   :line2: ""
-  :line3: ""
-  :line4: ""
-  :line5: ""
-  :line6: ""
-# Knifejack
--
-  :deck: "Knifejack"
-  :title: "Whirlwind" # TODO: make this a verb
-  :type: ""
-  :icon: ""
-  :border_color: ""
-  :line1: "Deal 2 damage to"
-  :line2: "ALL enemies."
-  :line3: ""
-  :line4: ""
+  :line3: "<b>Combo</b>: <i>Absorb</i>"
+  :line4: "Draw 2 cards."
   :line5: ""
   :line6: ""
 -
-  :deck: "Knifejack"
-  :title: "Rapid Strike"
-  :type: ""
+  :deck: "Mauler"
+  :title: "Focus" # Gather
+  :type: "Action"
   :icon: ""
   :border_color: ""
-  :line1: "Deal 2 damage."
+  :line1: "Draw a card."
+  :line2: "Restore 1 <b>Health</b> to you."
+  :line3: "Remove 1 status effect from you."
+  :line4: "Gain <b>Inspiration</b>."
+  :line5: "Remove this card from the game."
+  :line6: "You may take another <b>Action</b>."
+# Jackknife
+-
+  :deck: "Jackknife"
+  :title: "Fling"
+  :type: "Action"
+  :icon: ""
+  :border_color: ""
+  :line1: "Deal 3 damage to up to two"
+  :line2: "different enemies that"
+  :line3: "you are not engaged with."
+  :line4: ""
+  :line5: ""
+  :line6: ""
+-
+  :deck: "Jackknife"
+  :title: "Pierce"
+  :type: "Action"
+  :icon: ""
+  :border_color: ""
+  :line1: "Deal 1 damage."
   :line2: "Draw a card."
   :line3: "You may take another <b>Action</b>."
-  :line4: ""
-  :line5: ""
-  :line6: ""
+  :line5: "<b>Combo</b>: <i>Rend</i>"
+  :line6: "For the rest of the round, increase"
+  :line4: "ALL damage done to the target by 2."
 -
-  :deck: "Knifejack"
-  :title: "Nimble Stride"
-  :type: ""
+  :deck: "Jackknife"
+  :title: "Reposition"
+  :type: "Reaction"
   :icon: ""
   :border_color: ""
-  :line1: ""
-  :line2: ""
+  :line1: "Play when <i>you</i> are attacked"
+  :line2: "to draw 2 cards."
   :line3: ""
-  :line4: ""
-  :line5: ""
-  :line6: ""
+  :line4: "<b>Combo</b>: <i>Trip</i>"
+  :line5: "Stun your attacker after"
+  :line6: "the attack."
 # Illusionist
 -
   :deck: "Illusionist"
-  :title: "Fear / Illude"
-  :type: ""
+  :title: "Terrorize"
+  :type: "Action"
   :icon: ""
   :border_color: ""
-  :line1: ""
+  :line1: "Deal 3 damage."
   :line2: ""
-  :line3: ""
-  :line4: ""
-  :line5: ""
-  :line6: ""
+  :line3: "You may swap the target with"
+  :line4: "the top card of the enemy"
+  :line5: "deck. If you do, the new"
+  :line6: "enemy keeps the HP of the target."
 -
   :deck: "Illusionist"
-  :title: "Reflect / Mirror"
-  :type: ""
+  :title: "Charm"
+  :type: "Reaction"
   :icon: ""
   :border_color: ""
-  :line1: ""
-  :line2: ""
+  :line1: "Prevent up to 4 damage to you"
+  :line2: "from an enemy you are engaged with."
   :line3: ""
-  :line4: ""
-  :line5: ""
-  :line6: ""
+  :line4: "<b>Combo</b>: <i>Control</i>"
+  :line5: "Deal all damage you prevented"
+  :line6: "to an enemy."
 -
   :deck: "Illusionist"
   :title: "Duplicate"
-  :type: ""
+  :type: "???"
   :icon: ""
   :border_color: ""
-  :line1: ""
-  :line2: ""
-  :line3: ""
-  :line4: ""
-  :line5: ""
-  :line6: ""
+  :line1: "Copy a card that was"
+  :line2: "played this <b>Round</b>."
+  :line3: "<i>OR</i>"
+  :line4: "Trigger the <b>Combo<b> of"
+  :line5: "a card that was played"
+  :line6: "this <b>Round</b>."
